--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+title: Phillip Raffnsøe
 baseurl: "" # the subpath of your site, e.g. /blog
 url: ""
 
@@ -10,5 +11,16 @@ plugins:
   # - jekyll-feed
   # - neat
   - sass
+
+projects:
+  - title: Bitwise
+    url: https://praffn.dk/bitwise/
+    thumbnail: /assets/thumbs/bitwise_2.gif
+  - title: Ingrid
+    url: https://github.com/praffn/ingrid
+    thumbnail: /assets/thumbs/ingrid_thumb.jpg
+  - title: Bitwise
+    url: https://praffn.dk/bitwise/
+    thumbnail: /assets/thumbs/bitwise_2.gif
 
 analytics: GTM-KRZ9PRQ
