--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,13 @@ title: Phillip Raffnsøe
 baseurl: ""
 url: "https://praffn.dk"
 
+og_logo: /assets/og_logo.jpg
+
 contact:
   email: phillip@praffn.dk
   phone: '+45 42483410'
+
+markdown:    kramdown
 
 social:
   - github: https://github.com/praffn/
@@ -16,6 +20,16 @@ collections:
     output: true
 
 markdown: kramdown
+
+kramdown:
+  # Use GitHub flavored markdown, including triple backtick fenced code blocks
+  input: GFM
+  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    # Use existing pygments syntax highlighting css
+  css_class: 'highlight'
+
 plugins:
   # - jekyll-feed
   # - neat
