--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Phillip Raffnsøe
+description: |
+  Freelance web designer and developer. Websites, webshops and single page apps.
 baseurl: ""
 url: "https://praffn.dk"
 
